--- a/css/site.css
+++ b/css/site.css
@@ -91,6 +91,7 @@ form > button {
   color: white;
   cursor: pointer;
   transition: all 0.15s;
+  width: 8rem;
 }
 
 form > button:hover {
@@ -100,6 +101,12 @@ form > button:hover {
 form > hr {
   margin: 0;
   border: 1px solid lightgray;
+}
+
+form > .add-story-form {
+    background-color: blue;
+    width: 8rem;
+  
 }
 
 .login-input label {
